<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:gravity="center"
        tools:context=".ui.view.UpdateTaskActivity">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            android:layout_margin="5dp"
            app:cardUseCompatPadding="false"
            android:layout_marginBottom="3dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/update_product_details"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

            <ImageView
                android:id="@+id/imageViewAddProd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/icon_product"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_prod_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_enter_product_name">

                <EditText
                    android:id="@+id/editTextProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_prod_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_description_needed" >

                <EditText
                    android:id="@+id/editTextProductDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_reg_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_enter_product_s_regular_price" >

                <EditText
                    android:id="@+id/editTextRegularPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_sale_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_enter_product_s_sale_price">

                <EditText
                    android:id="@+id/editTextSalePrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@android:color/black" />


            <Button
                android:id="@+id/button_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/colorRed"
                android:text="@string/delete"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:drawableEnd="@drawable/delete_products_small"
                android:textColor="@android:color/black"
                android:drawableRight="@drawable/delete_products_small" />


        </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>
</layout>