<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="addViewModel"
            type="com.prakash.fluperdemo.ui.viewmodel.AddProductsViewModel" />

    </data>

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@drawable/background"
        tools:context=".ui.view.AddProductsActivity">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            android:layout_margin="5dp"
            app:cardUseCompatPadding="false"
            android:layout_marginBottom="3dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="Add a Product"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                    />

                <ImageView
                    android:id="@+id/imageViewAddProd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:src="@drawable/icons_add_product"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_prod_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_enter_product_name">

                    <EditText
                        android:id="@+id/editTextProductName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{addViewModel.productName}"
                         />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_prod_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_description_needed">

                    <EditText
                        android:id="@+id/editTextProductDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{addViewModel.productDesc}"
                         />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_reg_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_enter_product_s_regular_price">

                    <EditText
                        android:id="@+id/editTextRegularPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{addViewModel.regularPrice}"
                        android:inputType="numberDecimal"
                         />


                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_sale_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_enter_product_s_sale_price">

                    <EditText
                        android:id="@+id/editTextSalePrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:text="@{addViewModel.salePrice}"
                         />

                </com.google.android.material.textfield.TextInputLayout>





                <Button
                    android:id="@+id/button_save"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/save"
                    android:drawableRight="@drawable/add_products"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textSize="22sp"
                    android:textColor="@android:color/black"
                    android:drawableEnd="@drawable/add_products" />

                <!--            android:onClick="@{addViewModel.onSaveButtonClick}"-->


            </LinearLayout>





        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>
</layout>